kubernetes/deployment-streamlit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: binarazor-deployment
  labels:
    app: binarazor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: binarazor
  template:
    metadata:
      labels:
        app: binarazor
    spec:
      containers:
        - name: binarazor
          image: sagar87/binarazor:marc
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
          resources:
            requests:
              cpu: "1000m"
              memory: "16Gi"
            limits:
              cpu: "2000m"
              memory: "32Gi"
