kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: binarazor-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: sectigo
spec:
  ingressClassName: internal-users
  rules:
    - host: triangle-binarazor.embl.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: binarazor-service
                port:
                  number: 8501
